fix: padding & margin wrapping

--- a/src/00-utils/_mixins.scss
+++ b/src/00-utils/_mixins.scss
@@ -42,16 +42,21 @@
 	@if $responsive {
 		@each $name, $viewport in $localViewports {
 			@each $selector in & {
-				$newSelector: str-replace(#{$selector}, "=", '="');
-				$newSelector: str-replace(#{$newSelector}, "]", '"]');
+				$not: str-slice(#{$selector}, str-length(#{$selector})) == ")";
+				$minus: if($not, -4, -3);
+				$newSelector: str-replace(
+					str-replace(#{$selector}, "=", '="'),
+					"]",
+					'"]'
+				);
 				/// mobile first
 				@media (min-width: $viewport + 1) {
 					/// attr selector support
-
-					@at-root #{str-slice($newSelector, 1, -3)
+					$end: if($not, '"])', '"]');
+					@at-root #{str-slice($newSelector, 1, $minus)
 							+ "\:"
 							+ $name
-							+ '"]'} {
+							+ $end} {
 						@content;
 					}
 				}
@@ -60,10 +65,11 @@
 				@if $desktop {
 					@media (max-width: $viewport) {
 						/// attr selector support
-						@at-root #{str-slice($newSelector, 1, -3)
+						$end: if($not, '-inv"])', '-inv"]');
+						@at-root #{str-slice($newSelector, 1, $minus)
 								+ "\:"
 								+ $name
-								+ '-inv"]'} {
+								+ $end} {
 							@content;
 						}
 					}
