--- a/src/03-base/_globals.scss
+++ b/src/03-base/_globals.scss
@@ -226,6 +226,7 @@ strong,
 }
 
 /// gaping fix
+/// flx & flxInline
 ///
 /// @group SharedStyles
 [class*="x-flx"] {
@@ -235,7 +236,7 @@ strong,
 			> :not(.unfix__gaping) {
 				&[class*="__flx"][class*="-wrap"],
 				&[class*="__flx"][class*="-reverse"],
-				&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+				&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-no"]) {
 					&:first-child:only-of-type,
 					&:last-child {
 						// margin-bottom: 0;
@@ -250,7 +251,7 @@ strong,
 			> :not(.unfix__gaping) {
 				&[class*="__flx"][class*="-wrap"],
 				&[class*="__flx"][class*="-reverse"],
-				&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+				&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-no"]) {
 					&:first-child:only-of-type,
 					&:last-child {
 						// margin-bottom: 0;
@@ -268,7 +269,7 @@ strong,
 		&:last-child:not([class*="x-item"]) > :last-child:not(.unfix__gaping) {
 			&[class*="__flx"][class*="-wrap"],
 			&[class*="__flx"][class*="-reverse"],
-			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-no"]) {
 				margin: 0;
 			}
 		}
