--- a/src/05-components/_view.scss
+++ b/src/05-components/_view.scss
@@ -108,7 +108,7 @@ $viewPathEnd: "' fill='%23fff' /%3E%3C/svg%3E%0A";
 			margin-bottom: var(--gy, 2rem);
 			&[class*="__flx"][class*="-wrap"],
 			&[class*="__flx"][class*="-reverse"],
-			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-none"]) {
+			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-no"]) {
 				margin-bottom: calc(-1 * (var(--g) - var(--gy)));
 			}
 		}
